gxti        2006/03/20 02:40:44 UTC	(20060320-4907)
  Log:
  Allow users to GHOST other nicks which are logged into their account.
  

  Changes:	Modified:
  +11 -3	trunk/modules/nickserv/ghost.c (File Modified) 


nenolod     2006/03/18 05:40:51 UTC	(20060318-4905)
  Log:
  - i will not code when half awake again
  

  Changes:	Modified:
  +1 -1		trunk/src/services.c (File Modified) 


nenolod     2006/03/18 05:27:35 UTC	(20060318-4903)
  Log:
  - sanity checking
  

  Changes:	Modified:
  +3 -0		trunk/src/services.c (File Modified) 


nenolod     2006/03/14 02:36:14 UTC	(20060314-4899)
  Log:
  - add support for charybdis +halfops patch
  

  Changes:	Modified:
  +2 -0		trunk/include/protocol/charybdis.h (File Modified) 
  +8 -0		trunk/protocol/charybdis.c (File Modified) 


jilles      2006/03/11 20:59:53 UTC	(20060311-4897)
  Log:
  Make xmlrpc work with httpheader disabled.
  
  Pointed out by: Trystan
  

  Changes:	Modified:
  +3 -2		trunk/src/xmlrpc.c (File Modified) 


jilles      2006/03/09 17:39:13 UTC	(20060309-4895)
  Log:
  unreal: Introduce services with +S (network service,
  prevents kick/deop on channels etc).
  

  Changes:	Modified:
  +1 -1		trunk/protocol/unreal.c (File Modified) 


jilles      2006/03/08 17:03:41 UTC	(20060308-4893)
  Log:
  Make fantasy commands work again in the normal case with chanserv.
  

  Changes:	Modified:
  +6 -0		trunk/modules/chanserv/main.c (File Modified) 
  +5 -2		trunk/src/conf.c (File Modified) 


jilles      2006/03/03 17:34:10 UTC	(20060303-4889)
  Log:
  Allow specification of akill duration in hours (h), days (d) and weeks (w).
  Make the checks on durations more strict (no extraneous characters allowed,
  no permanent akills via !T).
  

  Changes:	Modified:
  +10 -5	trunk/help/oservice/akill (File Modified) 
  +20 -0	trunk/modules/operserv/akill.c (File Modified) 


jilles      2006/03/03 17:16:55 UTC	(20060303-4887)
  Log:
  Add /os akill sync, sends all akills to all servers.